# DebugProxy

./: LICENSE  README.md  output.txt  package.json  pnpm-lock.yaml  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cert.rs  lib.rs  main.rs  procs.rs  proxy.rs  settings.rs
src/lib/: bindings.ts  breakpoints.svelte.ts  keymap.svelte.ts  proxy.svelte.ts  rpc.ts  scripts.svelte.ts  toast.svelte.ts  types.ts  utils.ts  window.svelte.ts
src/lib/components/: CodeEditor.svelte  ConfirmationModal.svelte  Inspector.svelte  InterceptorPanel.svelte  JsonViewer.svelte  ProxyContextMenu.svelte  ScriptPanel.svelte  SettingsDropdown.svelte  SslBypassModal.svelte  SslSettingsModal.svelte  ToastContainer.svelte  Toggle.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/inspector/: +page.svelte
src/routes/interceptor/: +page.svelte
src/routes/scripts/: +page.svelte
