[package]
name = "debug_proxy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "debug_proxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hudsucker = { version = "0.24.0", features = ["full", "http2"] }
rcgen = "0.14.7"
tokio = { version = "1.50.0", features = ["full"] }
hyper = "1.8.1"
local-ip-address = "0.6.10"
log = "0.4.29"
tauri-plugin-log = "2.8.0"
http-body-util = { version = "0.1.3", features = ["full"] }
rustls = { version = "0.23.37", features = ["ring"] }
base64 = "0.22.1"

